--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <title>Redes Sociais</title>
 </head>
 <body>
-
+<header>
+    <h1>relatorio das redes Sociais</h1>
+    <nav>
+        <a href="index.html">mundo</a>
+        <a href="#">minha escola</a>
+    </nav>
+    </header>
+    <main class="graficos-section">
+        <section id="graficos-container" class="graficos-container">
+            <!-- crie os graficos aqui-->
+        </section>
+    </main>
+<footer>
+    <p>desenvolvido por gui lima</p>
+</footer>
 </body>
 </html>
-
